ansible/roles/monitoring/files/prometheus/06-ingress-resource.yml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  rules:
  - host: mprometheus.bukhara-chkh.ir
    http: 
      paths:
      - path: /targets
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
